# dealii

./: my-laplace-problem.cpp  my-laplace-problem.h
examples/myCodes/: test.cpp  test.h
examples/myCodes/0-compare-fcm-to-exact-solution/: FEMLaplace  fcm-tools.h  find_cells.h  function_classes.h  mypolygon.h  parameters.h  step-3.cc
examples/myCodes/PenaltyMethodOnAdaptiveGrid/: CMakeCache.txt  CMakeLists.txt  Makefile  PenaltyMethodOnAdaptiveGrid  PenaltyMethodOnAdaptiveGrid.cc  adaptiveNumberOfQuadraturePoints  cmake_install.cmake  integration_grid.eps  solution  solution.gpl  solution.vtk  solution_grid.eps
examples/myCodes/adaptiveIntegration/: CMakeCache.txt  CMakeLists.txt  Makefile  Quadrature Points  QuadraturePoints  Values  adaptiveIntegration  adaptiveIntegration.cbp  adaptiveIntegration.cc  adaptiveIntegration_testadaptivegrid.cc  cell_matrices  cmake_install.cmake  final-solution.vtk  integration_grid-0.eps  integration_grid-1.eps  integration_grid.eps  solution  solution-2.gpl  solution.gpl  solution.vtk  system_rhs
examples/myCodes/adaptiveNumberOfQuadraturePoints/: CMakeCache.txt  CMakeLists.txt  Makefile  adaptiveNumberOfQuadraturePoints  adaptiveNumberOfQuadraturePoints copy.cc  adaptiveNumberOfQuadraturePoints.cbp  adaptiveNumberOfQuadraturePoints.cc  cmake_install.cmake  integration_grid.eps  quadrature_points  solution  solution.gpl  solution.vtk  solution_grid.eps
examples/myCodes/finite-cell-implementation/: LaplaceProblemFEM.cpp  LaplaceProblemFEM.h
examples/myCodes/heat-transport/: CMakeLists.txt  LaplaceProblemFEM.cpp  LaplaceProblemFEM.h  heat-transport.cpp
examples/step-3/: step-3  step-3.cc
(+101 files in other folders)
